--- a/client/assets/scss/style.scss
+++ b/client/assets/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'components/wrapper';
 @import 'components/app';
 @import 'components/board';
+@import 'components/ship';
 
 // Layout
 @import 'layout/global';
